Users list finished

--- a/index.html
+++ b/index.html
@@ -4,13 +4,28 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="main.js"></script>
+  <script src="main.js" defer></script>
   <title>Document</title>
 </head>
 <body>
-  <div>
-    
+  <form class="form">
+    <label> NAME: </label>
+    <input class="input-name" placeholder="Type your name" >
+    <label> USERNAME: </label>
+    <input class="input-username" placeholder="Type your username" >
+    <label> EMAIL: </label>
+    <input class="input-email" placeholder="Type your email" >
+    <label> COMPANY: </label>
+    <input class="input-company" placeholder="Type your company name" >
+    <label> ADDRESS: </label>
+    <input class="input-city" placeholder="Type your city" >
+    <input class="input-street" placeholder="Type your street" >
+  </form>
+   <button class="submit"> SUBMIT </button>
+ 
+  <div class="container"> 
   </div>
 </body>
 </html>
